cmake_minimum_required(VERSION 3.21)
project(Algorithm_Exercises)
set(CMAKE_CXX_STANDARD 14)

add_subdirectory(basic)
add_subdirectory(data_structure)
add_subdirectory(computational_geometry)
add_subdirectory(dynamic_program)
add_subdirectory(mathematics)
add_subdirectory(search)
add_subdirectory(string)
add_subdirectory(others)
add_subdirectory(tree_graph)
